Added the code needed to compute ORR transmission spectrum. It needs to be tested. Should also include a version that can compute T based on wavelength dependent effective index values.

--- a/ORR_Filter/ORR_Filter/ORR_Filter.vcxproj
+++ b/ORR_Filter/ORR_Filter/ORR_Filter.vcxproj
@@ -118,6 +118,7 @@
     <ClInclude Include="Attach.h" />
     <ClInclude Include="Material_Models.h" />
     <ClInclude Include="Neville.h" />
+    <ClInclude Include="Ring_Resonator.h" />
     <ClInclude Include="Templates.h" />
     <ClInclude Include="Testing.h" />
     <ClInclude Include="Useful.h" />
@@ -127,6 +128,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Material_Models.cpp" />
     <ClCompile Include="Neville.cpp" />
+    <ClCompile Include="Ring_Resonator.cpp" />
     <ClCompile Include="Testing.cpp" />
     <ClCompile Include="Useful.cpp" />
     <ClCompile Include="Vector_Utils.cpp" />
