--- a/ORR_Filter/ORR_Filter/ORR_Filter.vcxproj.filters
+++ b/ORR_Filter/ORR_Filter/ORR_Filter.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="Testing.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Ring_Resonator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Material_Models.cpp">
@@ -54,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Testing.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Ring_Resonator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
